--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "url": "https://github.com/Thomas-381/r4a10-tp-api-js/issues"
   },
   "homepage": "https://github.com/Thomas-381/r4a10-tp-api-js#readme",
-  "type" : "module",
+  "type": "module",
   "dependencies": {
     "director": "^1.2.8",
     "finalhandler": "^1.3.1",
+    "node-fetch": "^3.3.2",
     "serve-static": "^1.16.2"
   }
-  
 }
